--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,20 @@
 .tmp_versions/
 Module.symvers
 modules.order
-platform_test.c
 platform_test_dts.c
 send_data.c
 send_data2.c
+.platform_test_dts.ko.cmd
+.platform_test_dts.mod.o.cmd
+.platform_test_dts.o.cmd
+platform_test_dts.ko
+platform_test_dts.mod.c
+platform_test_dts.mod.o
+platform_test_dts.o
+platform_test.ko
+platform_test.mod.c
+platform_test.mod.o
+platform_test.o
+.platform_test.ko.cmd
+.platform_test.mod.o.cmd
+.platform_test.o.cmd
